Agregados detalles finales de diseño a la página web

--- a/index.html
+++ b/index.html
@@ -292,28 +292,32 @@
     <section id="nosotros">
       <div class="container">
         <h2 class="nost__h2">Nosotros</h2>
-        <div class="nost__contp">
-          <p class="nost__p">En el año 2.019, Mildre y Marycelis, comenzaron un Emprendimiento relacionado con postres,
-            tortas y pasapalos, entre otros, nombrándolo (dulces y salados MM).
-            Las Mangas Pasteleras y Reposteras utilizadas para dicha labor, carecían de la resistencia o durabilidad
-            necesaria para tales actividades; por lo que Mildre decidió, diseñar y confeccionar nuestras propias Mangas
-            Pasteleras y Reposteras, obteniendo así, la resistencia y durabilidad que se esperaba. </p>
-        </div>
-        <div class="nost__contcirc">
-          <img src="img/Elipse 60.svg" alt="">
-          <div class="nost__contimg">
-            <img src="img/Captura de pantalla 2021-07-26.png" alt="foto Mary y Mildre">
+        <div class="nost__grid">
+          <div class="nost__contp">
+            <p class="nost__p">En el año 2.019, Mildre y Marycelis, comenzaron un Emprendimiento relacionado con
+              postres,
+              tortas y pasapalos, entre otros, nombrándolo (dulces y salados MM).
+              Las Mangas Pasteleras y Reposteras utilizadas para dicha labor, carecían de la resistencia o durabilidad
+              necesaria para tales actividades; por lo que Mildre decidió, diseñar y confeccionar nuestras propias
+              Mangas
+              Pasteleras y Reposteras, obteniendo así, la resistencia y durabilidad que se esperaba. </p>
           </div>
-        </div>
-        <div class="nost__contp2">
-          <p class="nost__p2">Es entonces cuando se toma la decisión de comercializarlas, innovando en su diseño,
-            tamaños y texturas, así como el procurar que en cada producción, nos esforcemos en superar su resistencia,
-            durabilidad y calidad; naciendo <span>Creación Mildre 73</span>.</p>
-        </div>
-        <div class="nost__contblob">
-          <img src="img/blob.svg" alt="">
-          <div class="nost__contfig">
-            <img src="img/SVG dos chicas una torta.svg" alt="chicas con pastel">
+          <div class="nost__contcirc">
+            <img src="img/Elipse 60.svg" alt="">
+            <div class="nost__contimg">
+              <img src="img/Captura de pantalla 2021-07-26.png" alt="foto Mary y Mildre">
+            </div>
+          </div>
+          <div class="nost__contp2">
+            <p class="nost__p2">Es entonces cuando se toma la decisión de comercializarlas, innovando en su diseño,
+              tamaños y texturas, así como el procurar que en cada producción, nos esforcemos en superar su resistencia,
+              durabilidad y calidad; naciendo <span>Creación Mildre 73</span>.</p>
+          </div>
+          <div class="nost__contblob">
+            <img src="img/blob.svg" alt="">
+            <div class="nost__contfig">
+              <img src="img/SVG dos chicas una torta.svg" alt="chicas con pastel">
+            </div>
           </div>
         </div>
       </div>
